check_PROGRAMS = testpack testsock testlist testarray testdispatch
testpack_SOURCES = testpack.c
testsock_SOURCES = testsock.c
testlist_SOURCES = testlist.c
testarray_SOURCES = testarray.c
testdispatch_SOURCES = testdispatch.c
LDADD = ../lib/libdaliusb.a
AM_CFLAGS = -I../lib
TESTS = $(check_PROGRAMS)

